// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Schema createEntry: should work 1`] = `
Object {
  "data": Object {
    "createEntry": Object {
      "Guest": Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "lastName": "Doe",
      },
      "id": "asdf",
      "see": "xyz",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema endEntry: should work 1`] = `
Object {
  "data": Object {
    "endEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2020-02-01T00:00:00",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getByGuestId: should work 1`] = `
Object {
  "data": Object {
    "byGuestId": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getEntry: should work 1`] = `
Object {
  "data": Object {
    "getEntry": Object {
      "createdAt": "2019-03-15T00:57:13",
      "endedAt": "2020-01-22T13:33:14",
      "id": "9fd5fd11-603e-47e8-b104-de39071c7b80",
      "see": "Derrick Smitham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
